src/objects/Strategy_Rating_Process__c.object
<CustomObject>
    <description>Used to track and manage the rating process, looks up to Accounts and Products</description>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pending Ratings</relationshipLabel>
        <relationshipName>New_Consultant_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Rating__c</fullName>
        <inlineHelpText>This corresponds to the Consultant&apos;s name for a rating</inlineHelpText>
        <label>External Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Rating__c</fullName>
        <inlineHelpText>This rating corresponds to the MFS defined, common rating for a Consultant Rated Product</inlineHelpText>
        <label>MFS Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Rated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>New_Consultant_Rating</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Request_Reason__c</fullName>
        <label>Rating Request Rationale</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Consultant Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Internal Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Initiated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Be Rated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <label>Strategy Rating Process</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Rating Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RequireRatingValues</fullName>
        <active>true</active>
        <description>Requires MFS Rating for approval.</description>
        <errorConditionFormula>TEXT(Status__c) = &quot;Request for Internal Approval&quot;

&amp;&amp;
 
ISBLANK((TEXT(MFS_Rating__c)))</errorConditionFormula>
        <errorMessage>Please enter MFS Rating before submitting for approval.</errorMessage>
    </validationRules>
</CustomObject>